<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    android:id="@+id/course_list_student_row">

    <TextView
        android:id="@+id/label_course_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.4"
        android:text="@string/string_id" />

    <TextView
        android:id="@+id/label_course_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:text="@string/string_nazwa" />

    <TextView
        android:id="@+id/label_course_semester"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_semestr" />

    <Button
        android:id="@+id/course_button_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_weight="0.6"
        android:drawableLeft="@drawable/ic_delete_24px"
        android:padding="0dp" />

</LinearLayout>