<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.raport.RaportFragment" >

    <LinearLayout
        android:id="@+id/label_today_grades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toTopOf="@+id/raport_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/grade_list_today_row_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:text="@string/string_imie" />

        <TextView
            android:id="@+id/grade_list_today_row_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:text="@string/string_student_input_nazwisko" />

        <TextView
            android:id="@+id/grade_list_today_row_subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.9"
            android:text="@string/string_przedmiot" />

        <TextView
            android:id="@+id/label_grade_grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="ocena" />

        <TextView
            android:id="@+id/label_grade_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.1"
            android:text="@string/string_komentarz" />


        <TextView
            android:id="@+id/label_grade_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:text="data" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/raport_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_today_grades" />

</androidx.constraintlayout.widget.ConstraintLayout>