<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addingCourse.AddingCourseFragment"
   >

    <EditText
        android:id="@+id/course_input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/string_nazwa"
        android:inputType="textCapSentences"
        app:layout_constraintBottom_toTopOf="@+id/course_input_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002" />

    <Spinner
        android:id="@+id/course_input_spinner"
        android:layout_width="211dp"
        android:layout_height="35dp"
        android:entries="@array/semester"
        app:layout_constraintBottom_toTopOf="@+id/course_button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_input_name" />

    <Button
        android:id="@+id/course_button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/string_dodaj"
        app:layout_constraintBottom_toTopOf="@+id/course_list_student_row"
        app:layout_constraintEnd_toStartOf="@+id/course_button_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_input_spinner" />

    <Button
        android:id="@+id/course_button_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/string_edytuj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/course_button_add"
        app:layout_constraintTop_toBottomOf="@+id/course_input_spinner" />

    <LinearLayout
        android:id="@+id/course_list_student_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toTopOf="@+id/course_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_button_add">

        <TextView
            android:id="@+id/label_course_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:text="@string/string_id" />

        <TextView
            android:id="@+id/label_course_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/string_nazwa" />

        <TextView
            android:id="@+id/label_course_semester"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:text="@string/string_semestr" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/course_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_list_student_row" />

    <TextView
        android:id="@+id/student_label_semester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/string_semestr"
        app:layout_constraintBottom_toBottomOf="@+id/course_input_spinner"
        app:layout_constraintEnd_toStartOf="@+id/course_input_spinner"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/course_input_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>