<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addingGrade.AddingGradeFragment" >

    <Spinner
        android:id="@+id/grade_semester_spinner"
        android:layout_width="211dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/semester"
        app:layout_constraintBottom_toTopOf="@+id/grade_student_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/grade_student_spinner"
        android:layout_width="211dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/grade_course_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade_semester_spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/Studenci"
        app:layout_constraintBottom_toBottomOf="@+id/grade_student_spinner"
        app:layout_constraintEnd_toStartOf="@+id/grade_student_spinner"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grade_student_spinner"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/string_semestr"
        app:layout_constraintBottom_toBottomOf="@+id/grade_semester_spinner"
        app:layout_constraintEnd_toStartOf="@+id/grade_semester_spinner"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grade_semester_spinner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/grade_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade_list_row" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/Przedmioty"
        app:layout_constraintBottom_toBottomOf="@+id/grade_course_spinner"
        app:layout_constraintEnd_toStartOf="@+id/grade_course_spinner"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grade_course_spinner" />

    <Spinner
        android:id="@+id/grade_course_spinner"
        android:layout_width="211dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/grade_grade_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade_student_spinner" />

    <EditText
        android:id="@+id/grade_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/grade_button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade_grade_spinner" />

    <Spinner
        android:id="@+id/grade_grade_spinner"
        android:layout_width="211dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/grade"
        app:layout_constraintBottom_toTopOf="@+id/grade_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade_course_spinner"
        app:layout_constraintVertical_bias="0.534" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Oceny"
        app:layout_constraintBottom_toBottomOf="@+id/grade_grade_spinner"
        app:layout_constraintEnd_toStartOf="@+id/grade_grade_spinner"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grade_grade_spinner" />

    <Button
        android:id="@+id/grade_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_dodaj"
        app:layout_constraintBottom_toTopOf="@+id/grade_list_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade_comment" />

    <LinearLayout
        android:id="@+id/grade_list_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toTopOf="@+id/grade_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade_button_add">

        <TextView
            android:id="@+id/label_grade_grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:text="ocena" />

        <TextView
            android:id="@+id/label_grade_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.4"
            android:text="@string/string_komentarz" />


        <TextView
            android:id="@+id/label_grade_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.2"
            android:text="data" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>